--- a/LaNoteEnchantee.html
+++ b/LaNoteEnchantee.html
@@ -21,7 +21,7 @@
     <section class="Carte entrees">
          <div class="restaurantH1">
              <div><h1>La note enchantée </h1></div>
-            <div><i class="far fa-heart"></i></div>
+            <div><i class="far fa-heart"></i><i class="fas fa-heart"></i></div>
         </div>
 
          <div class="entreesH4">Entrées</div>
