--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         
     </section>
 
+
     <section class="Fonctionnement">
 
         <div class="FonctionnementH1"><h1>Fonctionnement</h1></div>
@@ -52,7 +53,7 @@
                         <div class="detail ">
                             <h3>La palette du gout</h3>
                             <p>Ménilmontant</p></div>
-                        <div class="coeur"><i class="far fa-heart"></i></div>
+                        <div class="coeur"><i class="far fa-heart"></i><i class="fas fa-heart"></i></div>
                    </div>
                     <div class="nouveau"><p>Nouveau</p></div>
                 </a> </div> 
@@ -63,7 +64,7 @@
                         <div class="detail ">
                             <h3>La note enchantée</h3>
                             <p>Charonne</p></div>
-                        <div class="coeur"><i class="far fa-heart"></i></div>
+                        <div class="coeur"><i class="far fa-heart"></i><i class="fas fa-heart"></i></div>
                     </div>  
                     <div class="nouveau"><p>Nouveau</p></div>
                 </a> </div>  
@@ -74,7 +75,7 @@
                     <div class="detail ">
                         <h3>A la francaise</h3>
                         <p>Cité Rouge</p></div>
-                    <div class="coeur"><i class="far fa-heart"></i></div>
+                    <div class="coeur"><i class="far fa-heart"></i><i class="fas fa-heart"></i></div>
                    </div>
                </a> </div>  
 
@@ -84,7 +85,7 @@
                     <div class="detail ">
                         <h3>Le délice des sens</h3>
                         <p>Folie-Méricourt</p></div>
-                    <div class="coeur"><i class="far fa-heart"></i></div>
+                    <div class="coeur"><i class="far fa-heart"></i><i class="fas fa-heart"></i></div>
                     </div>
                 </a></div>  
 
