--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section class="Reservez">
 
         <div class="position"> <i class="fas fa-map-marker-alt"></i><span>Paris, Belleville</span></div>
-        <div class="reservezMenu"><h1>Réservez le menu qui vous convient</h1></div>
+        <div class="reservezMenu"><h1> Réservez le menu qui vous convient</h1></div>
         <div class="sousTitre"><p>Découvrez des restaurants d'exception,sélèctionnés par nos soins.</p></div>
         <div class="boutonExplorer"><button>Explorer nos restaurants</button></div>
         
@@ -73,7 +73,7 @@
                     <img class="paletteImage" src="images\toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt=""></a>
                     <div class="containerDetailEtCoeur">
                     <div class="detail ">
-                        <h3>A la francaise</h3>
+                        <h3>A la française</h3>
                         <p>Cité Rouge</p></div>
                     <div class="coeur"><i class="far fa-heart"></i><i class="fas fa-heart"></i></div>
                    </div>
@@ -96,7 +96,7 @@
     <footer>
         <div class="titreFooter"><h1>ohmyfood</h1></div>
         <div class="proposer"><p><i class="fas fa-utensils"></i>Proposer un restaurant</p></div>
-        <div class="devenir"><p><i class="fas fa-handshake"></i>Devenir partenaire</p></div>
+        <div class="devenir"><i class="fas fa-handshake"></i><p>Devenir partenaire</p></div>
         <div class="mentionsLegales"><p>Mentions légales</p></div>
         <div class="contact"><p>Contact</p></div>
 
