--- a/AlaFrancaise.html
+++ b/AlaFrancaise.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <div class="logoOhmyfood"><img src="images\ohmyfood.png" alt="logo ohmyfood"></div>
+        <div class="logoOhmyfood"><a href="index.html"><i class="fas fa-arrow-left"></i></a><img src="images\ohmyfood.png" alt="logo ohmyfood"></div>
     </header>
 
     <div class="imageRestaurant"><img src="images\toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo d'un plat du restaurant a la francaise"></div>
@@ -21,7 +21,7 @@
     <section class="Carte entrees">
          <div class="restaurantH1">
              <div><h1>A la française </h1></div>
-            <div><i class="far fa-heart"></i><i class="fas fa-heart"></i></div>
+            <div class="coeurMenu"><i class="far fa-heart"></i><i class="fas fa-heart"></i></div>
         </div>
 
          <div class="entreesH4">Entrées</div>
