--- a/LaPaletteDuGout.html
+++ b/LaPaletteDuGout.html
@@ -8,11 +8,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="styles.css">
-    <title>Menu à la Francaise</title>
+    <title>Menu la palette du gout</title>
 </head>
 <body>
     <header>
-        <div class="logoOhmyfood"><img src="images\ohmyfood.png" alt="logo ohmyfood"></div>
+        <div class="logoOhmyfood"><a href="index.html"><i class="fas fa-arrow-left"></i></a><img src="images\ohmyfood.png" alt="logo ohmyfood"></div>
     </header>
 
     <div class="imageRestaurant"><img src="images\jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo d'un plat du restaurant a la francaise"></div>
@@ -21,7 +21,7 @@
     <section class="Carte entrees">
          <div class="restaurantH1">
              <div><h1>La palette du goût</h1></div>
-            <div><i class="far fa-heart"></i><i class="fas fa-heart"></i></div>
+            <div class="coeurMenu"><i class="far fa-heart"></i><i class="fas fa-heart"></i></div>
         </div>
 
          <div class="entreesH4">Entrées</div>
