--- a/LeDeliceDesSens.html
+++ b/LeDeliceDesSens.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <div class="logoOhmyfood"><img src="images\ohmyfood.png" alt="logo ohmyfood"></div>
+        <div class="logoOhmyfood"><a href="index.html"><i class="fas fa-arrow-left"></i></a><img src="images\ohmyfood.png" alt="logo ohmyfood"></div>
     </header>
 
     <div class="imageRestaurant"><img src="images\louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo d'un plat du restaurant a la francaise"></div>
@@ -21,7 +21,7 @@
     <section class="Carte entrees">
          <div class="restaurantH1">
              <div><h1>Le délice des sens </h1></div>
-            <div><i class="far fa-heart"></i><i class="fas fa-heart"></i></div>
+            <div class="coeurMenu"><i class="far fa-heart"></i><i class="fas fa-heart"></i></div>
         </div>
 
          <div class="entreesH4">Entrées</div>
@@ -29,7 +29,7 @@
 
          <button class="boutonCarte">
             <div class="grandeBox">
-                <div class="box box1"><h3>Tartare de thon</h3>Assaisonné au yuzu</div>          
+                <div class="box box1"><h3>Tartare de thon</h3> Assaisonné au yuzu</div>          
                 <div class="box box2">25€</div>               
             <div class="box box3"><i class="fas fa-check"></i></div>
                  </div>                
