--- a/LaNoteEnchantee.html
+++ b/LaNoteEnchantee.html
@@ -15,7 +15,7 @@
         <div class="logoOhmyfood"><a href="index.html"><i class="fas fa-arrow-left"></i></a><img src="images\ohmyfood.png" alt="logo ohmyfood"></div>
     </header>
 
-    <div class="imageRestaurant"><img src="images\stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo d'un plat du restaurant de la note enchantée"></div>
+    <div class="imageRestaurant"><img src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo d'un plat du restaurant de la note enchantée"></div>
 
 <section class="CarteEntiere">
     <section class="Carte entrees">
