--- a/LaPaletteDuGout.html
+++ b/LaPaletteDuGout.html
@@ -15,7 +15,7 @@
         <div class="logoOhmyfood"><a href="index.html"><i class="fas fa-arrow-left"></i></a><img src="images\ohmyfood.png" alt="logo ohmyfood"></div>
     </header>
 
-    <div class="imageRestaurant"><img src="images\jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo d'un plat du restaurant a la francaise"></div>
+    <div class="imageRestaurant"><img src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo d'un plat du restaurant a la francaise"></div>
 
 <section class="CarteEntiere">
     <section class="Carte entrees">
