--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="restaurants">
 
                 <div class ="image laPaletteDuGout"><a href="LaPaletteDuGout.html">
-                    <img class="paletteImage" src="images\jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt=""></a>
+                    <img class="paletteImage" src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt=""></a>
                     <div class="containerDetailEtCoeur">
                         <div class="detail ">
                             <h3>La palette du gout</h3>
@@ -59,7 +59,7 @@
                 </a> </div> 
                 
                  <div class="image laNoteEnchante"><a href="LaNoteEnchantee.html">
-                    <img class="paletteImage" src="images\stil-u2Lp8tXIcjw-unsplash.jpg" alt=""></a>
+                    <img class="paletteImage" src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt=""></a>
                     <div class="containerDetailEtCoeur">
                         <div class="detail ">
                             <h3>La note enchantée</h3>
@@ -70,7 +70,7 @@
                 </a> </div>  
                 
                 <div class="image aLaFrancaise"><a href="AlaFrancaise.html">
-                    <img class="paletteImage" src="images\toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt=""></a>
+                    <img class="paletteImage" src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt=""></a>
                     <div class="containerDetailEtCoeur">
                     <div class="detail ">
                         <h3>A la française</h3>
@@ -80,7 +80,7 @@
                </a> </div>  
 
                 <div class="image leDeliceDesSens"><a href="LeDeliceDesSens.html">
-                    <img class="paletteImage" src="images\louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt=""></a>
+                    <img class="paletteImage" src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt=""></a>
                     <div class="containerDetailEtCoeur">
                     <div class="detail ">
                         <h3>Le délice des sens</h3>
