--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-    <div class="loader">ohmyfood</div>
+    <div class="loader"><div class="chargement">Chargement</div></div>
 
      <header>
         <div class="logoOhmyfood"><img src="images/ohmyfood.png" alt="logo ohmyfood"></div>
