--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
 
     <div class="loader"><div class="chargement">Chargement</div></div>
 
+    <!-- HEADER LOGO SITE-->
+
      <header>
         <div class="logoOhmyfood"><img src="images/ohmyfood.png" alt="logo ohmyfood"></div>
     </header>
+    <!-- SECTION RESERVEZ -->
+
     <section class="Reservez">
 
         <div class="position"> <i class="fas fa-map-marker-alt"></i><span>Paris, Belleville</span></div>
@@ -26,7 +30,8 @@
         
     </section>
 
-
+    <!-- SECTION FONCTIONNEMENT -->
+    
     <section class="Fonctionnement">
 
         <div class="FonctionnementH1"><h1>Fonctionnement</h1></div>
@@ -41,6 +46,8 @@
         </div>
 
     </section>
+
+    <!-- SECTION RESTAURANT -->
 
     <section class="Restaurants">
             <div class="restaurantH1"><h1>Restaurants</h1></div>
@@ -99,6 +106,8 @@
             </div>
 
     </section>
+
+    <!-- FOOTER -->
 
     <footer>
         <div class="titreFooter"><h1>ohmyfood</h1></div>
