--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- HEADER LOGO SITE-->
 
-     <header>
+     <header class="principale" >
         <div class="logoOhmyfood"><img src="images/ohmyfood.png" alt="logo ohmyfood"></div>
     </header>
     <!-- SECTION RESERVEZ -->
@@ -114,7 +114,7 @@
         <div class="proposer"><p><i class="fas fa-utensils"></i>Proposer un restaurant</p></div>
         <div class="devenir"><i class="fas fa-handshake"></i><p>Devenir partenaire</p></div>
         <div class="mentionsLegales"><p>Mentions légales</p></div>
-        <div class="contact"><p>Contact</p></div>
+        <div class="contact"><a href="mailto:" >Contact</a></div>
 
     </footer>
     
