--- a/LaPaletteDuGout.html
+++ b/LaPaletteDuGout.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <div class="logoOhmyfood"><a href="index.html"><i class="fas fa-arrow-left"></i></a><img src="images\ohmyfood.png" alt="logo ohmyfood"></div>
+        <div class="logoOhmyfood"><a href="index.html"><i class="fas fa-arrow-left"></i></a><img src="images/ohmyfood.png" alt="logo ohmyfood"></div>
     </header>
 
     <div class="imageRestaurant"><img src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo d'un plat du restaurant a la francaise"></div>
@@ -20,7 +20,7 @@
 <section class="CarteEntiere">
     <section class="Carte entrees">
          <div class="restaurantH1">
-             <div><h1>La palette du goût</h1></div>
+             <div><h2>La palette du goût</h2></div>
             <div class="coeurMenu"><i class="far fa-heart"></i><i class="fas fa-heart"></i></div>
         </div>
 
