--- a/LaPaletteDuGout.html
+++ b/LaPaletteDuGout.html
@@ -125,7 +125,7 @@
     <div class="proposer"><p><i class="fas fa-utensils"></i>Proposer un restaurant</p></div>
     <div class="devenir"><p><i class="fas fa-handshake"></i>Devenir partenaire</p></div>
     <div class="mentionsLegales"><p>Mentions légales</p></div>
-    <div class="contact"><p>Contact</p></div>
+    <div class="contact"><a href="mailto:ohmyfood.com">Contact</a></div>
 
 </footer>
 
