ajout d'ellipsis...sur le h3

--- a/LaNoteEnchantee.html
+++ b/LaNoteEnchantee.html
@@ -45,7 +45,7 @@
 
         <button class="boutonCarte entree">
             <div class="grandeBox">
-                <div class="box box1"><h3>Homard et espuma de ...</h3>Mariné aux zests d'orange</div>          
+                <div class="box box1"><h3>Homard et espuma de potiron</h3>Mariné aux zests d'orange</div>          
                 <div class="box box2">20€</div>               
             <div class="box box3"><i class="fas fa-check"></i></div>
                  </div>                
