--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 </head>
 <body>
 
+    <!-- LOADER -->
+
     <div class="loader"><div class="chargement">Chargement</div></div>
 
     <!-- HEADER LOGO SITE-->
