--- a/LaNoteEnchantee.html
+++ b/LaNoteEnchantee.html
@@ -11,11 +11,18 @@
     <title>Menu La note enchantée</title>
 </head>
 <body>
+
+    <!-- HEADER -->
+
     <header>
         <div class="logoOhmyfood"><a href="index.html"><i class="fas fa-arrow-left"></i></a><img src="images/ohmyfood.png" alt="logo ohmyfood"></div>
     </header>
 
+    <!-- IMAGE -->
+
     <div class="imageRestaurant"><img src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="photo d'un plat du restaurant de la note enchantée"></div>
+
+    <!-- SECTION CARTE ENTIERE-->
 
 <section class="CarteEntiere">
     <section class="Carte entrees">
@@ -127,6 +134,8 @@
        <div class="boutonCommander"><button>Commander</button></div>
 
 </section>
+
+    <!-- FOOTER -->
 
 <footer class="footerFrancais">
     <div class="titreFooter"><h1>ohmyfood</h1></div>
