--- a/LeDeliceDesSens.html
+++ b/LeDeliceDesSens.html
@@ -11,11 +11,18 @@
     <title>Menu Le délice des sens</title>
 </head>
 <body>
+
+    <!-- HEADER -->
+
     <header>
         <div class="logoOhmyfood"><a href="index.html"><i class="fas fa-arrow-left"></i></a><img src="images/ohmyfood.png" alt="logo ohmyfood"></div>
     </header>
 
+    <!-- IMAGE -->
+
     <div class="imageRestaurant"><img src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo d'un plat du restaurant a la francaise"></div>
+
+    <!-- SECTION CARTE ENTIERE-->
 
 <section class="CarteEntiere">
     <section class="Carte entrees">
@@ -118,6 +125,8 @@
        <div class="boutonCommander"><button>Commander</button></div>
 
 </section>
+
+    <!-- FOOTER -->
 
 <footer class="footerFrancais">
     <div class="titreFooter"><h1>ohmyfood</h1></div>
