--- a/AlaFrancaise.html
+++ b/AlaFrancaise.html
@@ -36,7 +36,7 @@
 
          <button class="boutonCarte entree">
             <span class="grandeBox">
-                <span class="box box1"><div><h3>Tartare de poulpe acidulé</h3>Aux zests d'orange</div></span>          
+                <span class="box box1"><h3>Tartare de poulpe acidulé</h3>Aux zests d'orange</span>          
                 <span class="box box2">25€</span>               
             <span class="box box3"><i class="fas fa-check"></i></span>
             </span>                
