--- a/LaPaletteDuGout.html
+++ b/LaPaletteDuGout.html
@@ -20,7 +20,7 @@
 
     <!-- IMAGE -->
 
-    <div class="imageRestaurant"><img src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo d'un plat du restaurant a la francaise"></div>
+    <div class="imageRestaurant"><img src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo d'un plat du restaurant la palette du gout"></div>
 
     <!-- SECTION CARTE ENTIERE -->
 
