--- a/LeDeliceDesSens.html
+++ b/LeDeliceDesSens.html
@@ -20,7 +20,7 @@
 
     <!-- IMAGE -->
 
-    <div class="imageRestaurant"><img src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo d'un plat du restaurant a la francaise"></div>
+    <div class="imageRestaurant"><img src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="photo d'un plat du restaurant le délice des sens"></div>
 
     <!-- SECTION CARTE ENTIERE-->
 
