--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                  
                 
                 <div class="image laNoteEnchante"><a href="LaNoteEnchantee.html">
-                    <img class="paletteImage" src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image d'un plat du restaurant la note enchantée">
+                    <img class="paletteImage" src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image d'un plat du restaurant la note enchantee">
                     <div class="containerDetailEtCoeur">
                         <div class="detail ">
                             <h3>La note enchantée</h3>
